--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   /*
+  "web port": 80,
   "devices": [
     {
       "name": "<device name>",
@@ -18,6 +19,7 @@
   ],
   */
 
+  "web port": 11000,
   "devices": [
     {
       "name": "Test device",
