--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,10 @@
     "parcel-bundler": "^1.10.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.4.1",
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "xterm": "^3.8.0"
   }
 }
