--- a/web/package.json
+++ b/web/package.json
@@ -9,14 +9,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vue/component-compiler-utils": "^2.3.0",
     "less": "^3.8.1",
-    "parcel-bundler": "^1.10.3"
+    "parcel-bundler": "^1.10.3",
+    "sass": "^1.14.3",
+    "vue-hot-reload-api": "^2.3.1",
+    "vue-template-compiler": "^2.5.17"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
     "bootstrap": "^4.1.3",
+    "components": "^0.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
+    "vue": "^2.5.17",
     "xterm": "^3.8.0"
   }
 }
