--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
     "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "components": "^0.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
