--- a/web/package.json
+++ b/web/package.json
@@ -18,12 +18,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "components": "^0.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
+    "vue-toasted": "^1.1.25",
     "xterm": "^3.8.0"
   }
 }
