--- a/config.example
+++ b/config.example
@@ -13,7 +13,8 @@
           "byte size": 8, // 5, 6, 7, 8
           "parity": "none", // even, odd, none
           "stop": 1, // 1, 1.5, 2
-          "tcp port": 10000
+          "tcp port": 10000,
+          "web telnet link": true, // Show a telnet:// link for this node in the web UI
         }
       ],
       "commands": "<commands module name>"
