--- a/web/package.json
+++ b/web/package.json
@@ -22,10 +22,15 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "components": "^0.1.0",
+    "file-saver": "^2.0.0-rc.4",
     "jquery": "^3.3.1",
+    "jszip": "^3.1.5",
+    "path": "^0.12.7",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
+    "vue-simple-progress": "^1.1.0",
     "vue-toasted": "^1.1.25",
+    "vuejs-dialog": "^1.3.0",
     "xterm": "^3.8.0"
   }
 }
