--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@vue/component-compiler-utils": "^2.3.0",
     "less": "^3.8.1",
     "parcel-bundler": "^1.10.3",
@@ -17,6 +19,7 @@
     "vue-template-compiler": "^2.5.17"
   },
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.1.2",
     "@fortawesome/fontawesome-free": "^5.4.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
@@ -28,7 +31,6 @@
     "path": "^0.12.7",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
-    "vue-simple-progress": "^1.1.0",
     "vue-toasted": "^1.1.25",
     "vuejs-dialog": "^1.3.0",
     "xterm": "^3.8.0"
