--- a/config.example
+++ b/config.example
@@ -14,8 +14,13 @@
           "parity": "none", // even, odd, none
           "stop": 1, // 1, 1.5, 2
           "tcp port": 10000,
-          "web telnet link": true, // Show a telnet:// link for this node in the web UI
+          "web links": ['telnet', 'ssh'], // Show a telnet link in the web UI, and an SSH PuTTY link if an ssh config block is present. Can also include 'raw' for a raw PuTTY link
           "web default visible": true, // Show by default in the web UI
+          "ssh": {
+            "host": "<host name>",
+            "username": "<username>", // Optional
+            "password": "<password>" // Optional
+          }
         }
       ],
       "commands": "<commands module name>",
