--- a/web/.babelrc
+++ b/web/.babelrc
@@ -2,6 +2,12 @@
   "plugins": [
     ["@babel/plugin-transform-runtime", {
       "corejs": 2
+    }],
+    ["prismjs", {
+      "languages": ["batch"],
+      "plugins": ["line-numbers", "normalize-whitespace"],
+      "theme": "okaidia",
+      "css": true
     }]
   ]
 }
