--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "serial-bridge.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build serial-bridge.js"
   },
   "author": "",
   "license": "ISC",
