--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "serial-bridge",
+	"version": "2.0.0",
 	"private": true,
 	"scripts": {
 		"build": "yarn server:build && yarn client:build",
-		"serve": "concurrently -c bgRed.black,bgGreen.black -n server,client yarn:server:serve yarn:client:serve",
+		"dev": "concurrently -c bgRed.black,bgGreen.black -n server,client yarn:server:dev yarn:client:dev",
 		"server:build": "cross-env NODE_ENV=production webpack",
 		"server:run": "node -r esm -r ts-node/register src/server/server.ts",
-		"server:serve": "webpack --watch",
+		"server:dev": "webpack --watch",
 		"client:build": "vue-cli-service build",
-		"client:serve": "vue-cli-service serve",
-		"postinstall": "patch-package"
+		"client:dev": "vue-cli-service serve"
 	},
 	"nodemonConfig": {
 		"watch": [
@@ -37,7 +37,6 @@
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
-		"@ky-is/vue-cli-plugin-tabs": "^1.1.0",
 		"@types/cors": "^2.8.6",
 		"@types/json5": "^0.0.30",
 		"@types/node": "^12.7.9",
