--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"server:run": "node -r esm -r ts-node/register src/server/server.ts",
 		"server:dev": "webpack --watch",
 		"client:build": "vue-cli-service build",
-		"client:dev": "vue-cli-service serve"
+		"client:dev": "cross-env VUE_APP_SERVER_PORT=11000 vue-cli-service serve"
 	},
 	"nodemonConfig": {
 		"watch": [
@@ -25,11 +25,19 @@
 		"@feathersjs/rest-client": "^4.3.3",
 		"@feathersjs/socketio": "^4.3.3",
 		"@feathersjs/socketio-client": "^4.3.3",
+		"@fortawesome/fontawesome-free": "^5.11.2",
+		"@hapi/joi": "15.0.1",
+		"ant-design-vue": "1.3.16",
+		"babel-plugin-prismjs": "^1.1.1",
 		"core-js": "^2.6.5",
 		"cors": "^2.8.5",
+		"deep-rename-keys": "^0.2.1",
 		"json5": "^2.1.0",
 		"ora": "^4.0.2",
+		"portal-vue": "^2.1.6",
+		"prismjs": "^1.17.1",
 		"serialport": "^7.1.5",
+		"slugify": "^1.3.5",
 		"socket.io-client": "^2.3.0",
 		"typesafe-joi": "^2.0.6",
 		"vue": "^2.6.10",
@@ -40,6 +48,7 @@
 		"@types/cors": "^2.8.6",
 		"@types/json5": "^0.0.30",
 		"@types/node": "^12.7.9",
+		"@types/prismjs": "^1.16.0",
 		"@types/serialport": "^7.0.4",
 		"@vue/cli-plugin-babel": "^3.11.0",
 		"@vue/cli-plugin-typescript": "^3.11.0",
@@ -58,6 +67,7 @@
 		"ts-node": "^8.4.1",
 		"typescript": "^3.7.0-beta",
 		"vue-template-compiler": "^2.6.10",
+		"webpack": "^4.41.0",
 		"webpack-cli": "^3.3.9"
 	}
 }
