--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@hapi/joi": "15.0.1",
 		"ant-design-vue": "1.3.16",
 		"babel-plugin-prismjs": "^1.1.1",
+		"chalk": "^2.4.2",
 		"core-js": "^2.6.5",
 		"cors": "^2.8.5",
 		"deep-rename-keys": "^0.2.1",
