Get rid of vue-golden-layout

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"core-js": "^2.6.5",
 		"cors": "^2.8.5",
 		"deep-rename-keys": "^0.2.1",
+		"golden-layout": "^1.5.9",
 		"jquery": "^3.4.1",
 		"json5": "^2.1.0",
 		"ora": "^4.0.2",
@@ -42,7 +43,6 @@
 		"socket.io-client": "^2.3.0",
 		"typesafe-joi": "^2.0.6",
 		"vue": "^2.6.10",
-		"vue-golden-layout": "^1.6.0",
 		"vue-router": "^3.0.3",
 		"webpack-node-externals": "^1.7.2",
 		"xterm": "^4.1.0",
