--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"slugify": "^1.3.5",
 		"socket.io-client": "^2.3.0",
 		"typesafe-joi": "^2.0.6",
+		"url-parse": "^1.4.7",
 		"vue": "^2.6.10",
 		"webpack-node-externals": "^1.7.2",
 		"xterm": "^4.1.0",
@@ -54,6 +55,7 @@
 		"@types/node": "^12.7.9",
 		"@types/prismjs": "^1.16.0",
 		"@types/serialport": "^7.0.4",
+		"@types/url-parse": "^1.4.3",
 		"@vue/cli-plugin-babel": "^3.11.0",
 		"@vue/cli-plugin-typescript": "^3.11.0",
 		"@vue/cli-service": "^3.11.0",
