--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@feathersjs/socketio-client": "^4.3.3",
 		"@fortawesome/fontawesome-free": "^5.11.2",
 		"@hapi/joi": "15.0.1",
+		"activedirectory": "^0.7.2",
 		"ant-design-vue": "1.3.16",
 		"babel-plugin-prismjs": "^1.1.1",
 		"chalk": "^2.4.2",
@@ -34,8 +35,10 @@
 		"cors": "^2.8.5",
 		"deep-rename-keys": "^0.2.1",
 		"golden-layout": "^1.5.9",
+		"is-ip": "^3.1.0",
 		"jquery": "^3.4.1",
 		"json5": "^2.1.0",
+		"node-json-db": "^1.0.1",
 		"ora": "^4.0.2",
 		"prismjs": "^1.17.1",
 		"serialport": "^7.1.5",
