--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "2.0.0",
 	"private": true,
 	"scripts": {
+		"package": "yarn build && node package.js",
 		"build": "yarn server:build && yarn client:build",
 		"dev": "concurrently -c bgRed.black,bgGreen.black -n server,client yarn:server:dev yarn:client:dev",
 		"server:build": "cross-env NODE_ENV=production webpack",
@@ -20,40 +21,27 @@
 		}
 	},
 	"dependencies": {
-		"@feathersjs/express": "^4.3.3",
-		"@feathersjs/feathers": "^4.3.3",
-		"@feathersjs/rest-client": "^4.3.3",
-		"@feathersjs/socketio": "^4.3.3",
-		"@feathersjs/socketio-client": "^4.3.3",
-		"@fortawesome/fontawesome-free": "^5.11.2",
-		"@hapi/joi": "15.0.1",
+		"@feathersjs/express": "^4.3.7",
+		"@feathersjs/feathers": "^4.3.7",
+		"@feathersjs/rest-client": "^4.3.7",
+		"@feathersjs/socketio": "^4.3.7",
+		"@feathersjs/socketio-client": "^4.3.7",
+		"@hapi/joi": "^15.0.1",
 		"activedirectory": "^0.7.2",
-		"animate.css": "^3.7.2",
-		"ant-design-vue": "1.3.16",
 		"async-mutex": "^0.1.4",
-		"babel-plugin-prismjs": "^1.1.1",
-		"chalk": "^2.4.2",
-		"core-js": "^2.6.5",
-		"cors": "^2.8.5",
 		"deep-rename-keys": "^0.2.1",
-		"golden-layout": "^1.5.9",
 		"is-ip": "^3.1.0",
-		"jquery": "^3.4.1",
-		"json5": "^2.1.0",
-		"node-json-db": "^1.0.1",
+		"json5": "^2.1.1",
+		"node-json-db": "^1.0.2",
 		"ora": "^4.0.2",
-		"prismjs": "^1.17.1",
 		"serialport": "^7.1.5",
 		"slugify": "^1.3.5",
-		"socket.io-client": "^2.3.0",
 		"typesafe-joi": "^2.0.6",
-		"url-parse": "^1.4.7",
-		"vue": "^2.6.10",
-		"webpack-node-externals": "^1.7.2",
-		"xterm": "^4.1.0",
-		"xterm-addon-fit": "^0.2.1"
+		"typescript": "^3.7.0-beta",
+		"url-parse": "^1.4.7"
 	},
 	"devDependencies": {
+		"@fortawesome/fontawesome-free": "^5.11.2",
 		"@types/cors": "^2.8.6",
 		"@types/jquery": "^3.3.31",
 		"@types/json5": "^0.0.30",
@@ -64,22 +52,38 @@
 		"@vue/cli-plugin-babel": "^3.11.0",
 		"@vue/cli-plugin-typescript": "^3.11.0",
 		"@vue/cli-service": "^3.11.0",
+		"animate.css": "^3.7.2",
+		"ant-design-vue": "1.3.16",
+		"babel-plugin-prismjs": "^1.1.1",
+		"chalk": "^2.4.2",
 		"concurrently": "^4.1.2",
+		"core-js": "^2.6.5",
+		"cors": "^2.8.5",
 		"cross-env": "^6.0.3",
 		"esm": "^3.2.25",
+		"fs-extra": "^8.1.0",
+		"golden-layout": "^1.5.9",
+		"jquery": "^3.4.1",
 		"less": "^3.0.4",
 		"less-loader": "^5.0.0",
 		"nodemon": "^1.19.3",
 		"nodemon-webpack-plugin": "^4.1.1",
 		"patch-package": "^6.2.0",
 		"postinstall-postinstall": "^2.0.0",
+		"prismjs": "^1.17.1",
 		"raw-loader": "^3.1.0",
+		"socket.io-client": "^2.3.0",
+		"synp": "^1.7.0",
 		"ts-loader": "^6.2.0",
 		"ts-node": "^8.4.1",
-		"typescript": "^3.7.0-beta",
+		"vue": "^2.6.10",
 		"vue-property-decorator": "^8.2.2",
 		"vue-template-compiler": "^2.6.10",
 		"webpack": "^4.41.0",
-		"webpack-cli": "^3.3.9"
+		"webpack-cli": "^3.3.9",
+		"webpack-node-externals": "^1.7.2",
+		"xterm": "^4.1.0",
+		"xterm-addon-fit": "^0.2.1",
+		"zip-dir": "^1.0.2"
 	}
 }
