--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"activedirectory": "^0.7.2",
 		"async-mutex": "^0.1.4",
 		"deep-rename-keys": "^0.2.1",
+		"hash-files": "^1.1.1",
 		"is-ip": "^3.1.0",
 		"node-json-db": "^1.0.2",
 		"ora": "^4.0.2",
