Fill out setup section of home view

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"deep-rename-keys": "^0.2.1",
 		"hash-files": "^1.1.1",
 		"is-ip": "^3.1.0",
+		"jszip": "^3.2.2",
 		"node-json-db": "^1.0.2",
 		"ora": "^4.0.2",
 		"serialport": "^7.1.5",
@@ -44,6 +45,7 @@
 		"@types/cors": "^2.8.6",
 		"@types/jquery": "^3.3.31",
 		"@types/json5": "^0.0.30",
+		"@types/jszip": "^3.1.6",
 		"@types/node": "^12.7.9",
 		"@types/prismjs": "^1.16.0",
 		"@types/serialport": "^7.0.4",
