--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"slugify": "^1.3.5",
 		"typesafe-joi": "^2.0.6",
 		"typescript": "^3.7.0-beta",
-		"url-parse": "^1.4.7"
+		"url-parse": "^1.4.7",
+		"xml2js": "^0.4.22"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.6",
@@ -50,6 +51,7 @@
 		"@types/prismjs": "^1.16.0",
 		"@types/serialport": "^7.0.4",
 		"@types/url-parse": "^1.4.3",
+		"@types/xml2js": "^0.4.5",
 		"@vue/cli-plugin-babel": "^3.11.0",
 		"@vue/cli-plugin-typescript": "^3.11.0",
 		"@vue/cli-service": "^3.11.0",
