--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"activedirectory": "^0.7.2",
 		"async-mutex": "^0.1.4",
 		"deep-rename-keys": "^0.2.1",
+		"filesize.js": "^2.0.0",
 		"hash-files": "^1.1.1",
 		"is-ip": "^3.1.0",
 		"jszip": "^3.2.2",
