--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,14 @@
 name: CI
 on:
   push:
+    branches: [ 'master' ]
   workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # node-version: [10.x, 12.x, 14.x, 15.x]
+        # node-version: [ 10.x, 12.x, 14.x, 15.x ]
         node-version: [ 10.x, 12.x ]
     steps:
     - uses: actions/checkout@v2
@@ -20,14 +21,15 @@ jobs:
     - name: Build
       run: yarn package
     - name: Upload
+      if: matrix.node-version == '10.x'
       uses: actions/upload-artifact@v2
       with:
-        name: package-${{ matrix.node-version }}
+        name: serial-bridge
         path: serial-bridge.zip
-  prep-release:
+  release:
     runs-on: ubuntu-latest
     needs: [ build ]
-    # if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: Create Release
       id: create-release
@@ -39,28 +41,17 @@ jobs:
         release_name: Build ${{ github.run_number }}
         draft: false
         prerelease: false
-    outputs:
-      upload_url: ${{ steps.create-release.outputs.upload_url }}
-  release:
-    runs-on: ubuntu-latest
-    needs: [ prep-release ]
-    # if: github.ref == 'refs/heads/master'
-    strategy:
-      matrix:
-        # node-version: [10.x, 12.x, 14.x, 15.x]
-        node-version: [ 10.x, 12.x ]
-    steps:
     - name: Download
       uses: actions/download-artifact@v2
       with:
-        name: package-${{ matrix.node-version }}
+        name: serial-bridge
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ needs.prep-release.outputs.upload_url }}
+        upload_url: ${{ steps.create-release.outputs.upload_url }}
         asset_path: serial-bridge.zip
-        asset_name: serial-bridge-node-${{ matrix.node-version }}.zip
+        asset_name: serial-bridge.zip
         asset_content_type: application/zip
