Add command palette

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
 		"axios": "^0.21.0",
 		"deep-rename-keys": "^0.2.1",
 		"filesize.js": "^2.0.0",
+		"fuse.js": "^6.4.6",
 		"hash-files": "^1.1.1",
+		"hotkeys-js": "^3.8.5",
 		"is-ip": "^3.1.0",
 		"jszip": "^3.2.2",
 		"node-json-db": "^1.0.2",
