--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"slugify": "^1.3.5",
 		"socket.io-client": "^2.3.0",
 		"typesafe-joi": "^2.0.6",
-		"typescript": "^3.7.0-beta",
+		"typescript": "^4.4.4",
 		"url-parse": "^1.4.7",
 		"vue-meta": "^2.4.0",
 		"xml2js": "^0.4.22",
