--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"fuse.js": "^6.4.6",
 		"hash-files": "^1.1.1",
 		"hotkeys-js": "^3.8.5",
+		"html2canvas": "^1.3.2",
 		"is-ip": "^3.1.0",
 		"jszip": "^3.2.2",
 		"node-json-db": "^1.0.2",
