--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"jszip": "^3.2.2",
 		"node-json-db": "^1.0.2",
 		"ora": "^4.0.2",
+		"require-like": "^0.1.2",
 		"serialport": "^7.1.5",
 		"slugify": "^1.3.5",
 		"socket.io-client": "^2.3.0",
