--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # node-version: [ 10.x, 12.x, 14.x, 15.x ]
-        node-version: [ 10.x, 12.x ]
+        node-version: [ 12.x, 14.x, 16.x ]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -21,7 +20,7 @@ jobs:
     - name: Build
       run: yarn package
     - name: Upload
-      if: matrix.node-version == '10.x'
+      if: matrix.node-version == '16.x'
       uses: actions/upload-artifact@v2
       with:
         name: serial-bridge
