--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"serialport": "^10.3.0",
 		"slugify": "^1.3.5",
 		"socket.io-client": "^2.3.0",
+		"sortablejs": "^1.15.0",
 		"typesafe-joi": "^2.0.6",
 		"typescript": "^4.4.4",
 		"url-parse": "^1.4.7",
@@ -64,6 +65,7 @@
 		"@types/jszip": "^3.1.6",
 		"@types/node": "^16",
 		"@types/prismjs": "^1.16.0",
+		"@types/sortablejs": "^1.15.4",
 		"@types/url-parse": "^1.4.3",
 		"@types/xml2js": "^0.4.5",
 		"@vue/cli-plugin-babel": "^3.11.0",
